--- a/helloworld.html
+++ b/helloworld.html
@@ -65,6 +65,6 @@
     <title>Hello, World!</title>
 </head>
 <body>
-    <div id="helloWorld">Hello, World!</div>
+    <div id="helloWorld">Hello, World! Edited</div>
 </body>
 </html>
