--- a/helloworld.html
+++ b/helloworld.html
@@ -1,70 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-            font-family: 'Arial', sans-serif;
-            overflow: hidden;
-        }
-
-        #helloWorld {
-            font-size: 3em;
-            color: #3498db;
-            opacity: 0;
-            transform: translateY(100px);
-            animation: fadeInUp 1.5s ease-out 0.5s forwards;
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(100px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        #helloWorld:hover {
-            color: #e74c3c;
-            cursor: pointer;
-            animation: heartbeat 0.6s ease-out infinite;
-        }
-
-        @keyframes heartbeat {
-            0% {
-                transform: scale(1);
-            }
-            20% {
-                transform: scale(1.2);
-            }
-            40% {
-                transform: scale(1);
-            }
-            60% {
-                transform: scale(1.2);
-            }
-            80% {
-                transform: scale(1);
-            }
-            100% {
-                transform: scale(1);
-            }
-        }
-    </style>
-    <title>Hello, World!</title>
+    <title>My Portfolio</title>
 </head>
 <body>
-    <div id="helloWorld">Hello, World! Edited</div>
+    <p>This is my portfolio.</p>
 </body>
 </html>
